--- a/PAW.Tarea2/PAW.Tarea2.Service/PAW.Tarea2.Service.csproj
+++ b/PAW.Tarea2/PAW.Tarea2.Service/PAW.Tarea2.Service.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{ADD80129-FB44-4F8C-BFD8-11664EC31E5F}</ProjectGuid>
+    <ProjectGuid>{27813FC8-36B9-41F0-B65C-BA1D48A0FAD4}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -76,7 +76,7 @@
     <Folder Include="Logic\Action\" />
     <Folder Include="Logic\Repositorie\" />
     <Folder Include="Logic\Specification\" />
-    <Folder Include="Logic\Validation\" />
+    <Folder Include="Logic\Verification\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
@@ -99,7 +99,7 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>50933</DevelopmentServerPort>
+          <DevelopmentServerPort>52397</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:50933/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
