--- a/PAW.Tarea2/PAW.Tarea2.Service/PAW.Tarea2.Service.csproj
+++ b/PAW.Tarea2/PAW.Tarea2.Service/PAW.Tarea2.Service.csproj
@@ -65,18 +65,18 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logic\Action\EcuacionCuadratica.cs" />
     <Compile Include="Logic\Service\Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
     <Compile Include="Logic\Interfaz\IService1.cs" />
+    <Compile Include="Logic\Specification\EcuacionCuadratica.cs" />
+    <Compile Include="Logic\Validation\ValidarEcuacionCuadratica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Logic\Action\" />
     <Folder Include="Logic\Repositorie\" />
-    <Folder Include="Logic\Specification\" />
-    <Folder Include="Logic\Verification\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
