--- a/PAW.Tarea2/CalculadoraTest/PAW.Tarea2.CalculadoraTest.csproj
+++ b/PAW.Tarea2/CalculadoraTest/PAW.Tarea2.CalculadoraTest.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalculadoraTest.cs" />
+    <Compile Include="PAW.Tarea2.CalculadoraTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
