The test is working

--- a/PAW.Tarea2/PAW.Tarea2.Test/PAW.Tarea2.Test.csproj
+++ b/PAW.Tarea2/PAW.Tarea2.Test/PAW.Tarea2.Test.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A37675E-8B14-4B36-90BA-D53F2BD9D043}</ProjectGuid>
+    <ProjectGuid>{D5321D77-A18A-4C58-A959-80D6A0A1042E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalculadoraTest</RootNamespace>
-    <AssemblyName>CalculadoraTest</AssemblyName>
+    <RootNamespace>PAW.Tarea2.Test</RootNamespace>
+    <AssemblyName>PAW.Tarea2.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PAW.Tarea2.CalculadoraTest.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
